# strip-docs

./: .codeclimate.yml  LICENSE  README.md  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
strip_docs/: run.py  strip_docs.py
tests/: file_to_strip.py  test_strip_docs.py
