# coding: utf-8
[metadata]
name = strip-docs
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
license_files = LICENSE
author = Ned Batchelder
description = A utility to remove all docstrings from your project
url = https://github.com/smok-serwis/strip-docs
project-urls =
	Code = https://github.com/smok-serwis/strip-docs
	Issue tracker = https://github.com/smok-serwis/strip-docs/issues
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: POSIX
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Topic :: System :: Software Distribution

[pycodestyle]
max-line-length = 100

[pep8]
max-line-length = 100

[bdist_wheel]
universal = 1

